--- a/src/main/resources/static/css/mainPage.css
+++ b/src/main/resources/static/css/mainPage.css
@@ -85,7 +85,7 @@ a{
     list-style:none;
 }
 .content li{
-    min-height: 1500px;
+    min-height: 1300px;
 }
 .content section{
     padding-top: 90px;
@@ -108,6 +108,9 @@ a{
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+.Reservation_header{
+    font-family: 'Nanum Gothic', sans-serif;
+}
 .Reservation_header button{
     width: 20%;
     height: 50px;
@@ -121,6 +124,47 @@ a{
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+.team_icon{
+    display: inline-block;
+    float: left;
+    padding: 0 5px;
+    margin-top: 100px;
+}
+.dish_icon{
+    display: inline-block;
+    padding: 0 5px;
+    margin-top: 100px;
+}
+.food_icon{
+    display: inline-block;
+    float: right;
+    padding: 0 5px;
+    margin-top: 100px;
+}
+
+.steak{
+    display: inline-block;
+    float: left;
+    padding-left: 150px;
+    padding-top: 100px;
+}
+.pasta{
+    display: inline-block;
+    float: right;
+    padding-right: 150px;
+    padding-top: 100px;
+}
+.salad{
+    float: left;
+    padding-left: 150px;
+    padding-top: 100px;
+}
+.tart{
+    display: inline-block;
+    float: right;
+    padding-right: 150px;
+    padding-top: 100px;
+}
 footer{
     height: 120px;
     background-color: #e0cda2;
