--- a/src/main/resources/static/bootstrap/css/styles.css
+++ b/src/main/resources/static/bootstrap/css/styles.css
@@ -10916,6 +10916,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 80%;
+  height: 80%;
+  font-size: 20px;
 }
 
 #display_flex_center {
