관리자 고객관리 v1

--- a/src/main/resources/templates/admin/addMenuPage.html
+++ b/src/main/resources/templates/admin/addMenuPage.html
@@ -155,18 +155,14 @@
             </nav>
         </div>
         <div id="layoutSidenav_content">
-
             <main>
-
-                
-
                 <div class="container-fluid px-4 mt-3">
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-table me-1"></i>
                             메뉴 관리
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="display_flex_center">
                             <table id="datatablesSimple">
                                 <thead>
                                     <tr>
