--- a/src/main/resources/templates/admin/manageCustomerPage.html
+++ b/src/main/resources/templates/admin/manageCustomerPage.html
@@ -233,28 +233,28 @@
                         <i class="fas fa-table me-1"></i>
                         고객 관리
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" id="display_flex_center">
                         <table id="datatablesSimple">
                             <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th>삭제</th>
+                                <th>회원명</th>
+                                <th>번호</th>
+                                <th>이메일</th>
                             </tr>
                             </thead>
 
                             <tbody>
 
-                            <tr>
-                                <td>Garrett Winters</td>
-                                <td>Accountant</td>
-                                <td>Tokyo</td>
-                                <td>63</td>
-                                <td>2011/07/25</td>
-                                <td>$170,750</td>
+                            <tr th:each="user : ${appUserList} ">
+                                <td>
+                                    <button class="deleteBtn" th:data-user-id="${user.uid}" type="button">
+                                        삭제
+                                    </button>
+                                </td>
+                                <td th:text="${user.name}">회원명</td>
+                                <td th:text="${user.phoneNumber}">번호</td>
+                                <td th:text="${user.email}">이메일</td>
                             </tr>
 
                             </tbody>
@@ -288,6 +288,25 @@
 </body>
 
 </html>
+
+<script>
+    $(document).ready(function () {
+        $(".deleteBtn").click(function () {
+            let uid = $(this).data("user-id");
+            if (window.confirm("※주의 : 가입한 고객을 삭제하면 해당 고객의 예약 기록이 모두 삭제 됩니다!!! ")) {
+                $.ajax({
+                    url: "/admin/customer/delete/" + uid,
+                    method: "DELETE",
+                }).done(function () {
+                    alert("삭제완료 했습니다.")
+                    window.location.href = '/admin/customerList';
+                }).fail(function () {
+                    alert("삭제 실패했습니다.")
+                });
+            }
+        });
+    });
+</script>
 
 <!-- <script>
     $(document).ready(function () {
