--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" th="http://www.thymeleaf.org">
     <title>SWEB</title>
@@ -7,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="main_site">
         <nav>
@@ -19,9 +21,8 @@
                     <li><a href="#main_Menu">Menu</a></li>
                     <li><a href="#main_Reservation">Reservation</a></li>
                     <li><a href="#main_Location">Location</a></li>
-                    <li onclick="javascript:btn()"><a  th:href="@{login/login}">MyPage</a></li>
+                    <li onclick="javascript:btn()"><a th:href="@{login/login}">MyPage</a></li>
                     <!-- <li><a th:href="@{login/login}">MyPage</a></li> -->
-    
                 </ul>
                 <ul class="navbar_member">
                     <li><a th:href="@{login/login}">LOG-IN</a></li>
@@ -37,18 +38,18 @@
 
     <div>
         <ul class="content">
-            <li>
-                <section class="mainsite_section" id="main_About">
-                    <div class="About_header">
-                        <div class="About_text_center">
-                            <h2>About</h2>
-                            <hr>
-                        </div>
+            <li class="mainsite_section" id="main_About">
+                <div class="About_header">
+                    <div class="text_center">
+                        <h2>About</h2>
+                        <hr>
+                    </div>
+                    <div id="About_content">
                         <div class="team_icon" id="icon">
                             <img src="img/team_icon.png" width="150px">
                             <div class="team_icon_caption">
                                 <h4>Introduce SWEB</h4>
-                                <p>SWEB 이란 Software-Engineering team B 라는 뜻의 퓨전 레스토랑입니다</p>
+                                <p>SWEB 이란 Software-Engineering team B 라는 뜻입니다</p>
                             </div>
                         </div>
                         <div class="dish_icon" id="icon">
@@ -66,84 +67,95 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </li>
-            <li>
-                <section class="mainsite_section" id="main_Menu">
-                    <div class="Menu_header">
-                        <div class="Menu_text_center">
-                            <h2>Best Menu</h2>
-                            <hr>
-                            <div class="steak">
-                                <img src="img/8.jpg" width="450px">
-                                <div class="steak_caption">
-                                    <h3>Steak</h3>
-                                    <p>~~~~</p>
-                                </div>
+            <li class="mainsite_section" id="main_Menu">
+                <div class="Menu_header">
+                    <div class="text_center">
+                        <h2>Best Menu</h2>
+                        <hr>
+                    </div>
+                    <div id="menu_content">
+                        <div class="steak">
+                            <img src="img/8.jpg" width="450px">
+                            <div class="steak_caption">
+                                <h3>안심 스테이크</h3>
+                                <p>고기의 풍미와 부드러움을 즐길 수 있는 안심 스테이크입니다. 고급진 메인 요리로, 고기를 좋아하는 분들에게 추천드립니다.</p>
                             </div>
-                            <div class="pasta">
-                                <img src="img/7.jpg" width="450px">
-                                <div class="pasta_caption">
-                                    <h3>Pasta</h3>
-                                    <p>~~~~</p>
-                                </div>
+                        </div>
+                        <div class="pasta">
+                            <img src="img/7.png" width="450px">
+                            <div class="pasta_caption">
+                                <h3>토마토 파스타</h3>
+                                <p>부드럽고 탱탱한 면과 풍부한 토마토 소스가 어우러진 파스타입니다.</p>
                             </div>
-                            <br>
-                            <div class="salad">
-                                <img src="img/6.jpg" width="450px">
-                                <div class="salad_caption">
-                                    <h3>Salad</h3>
-                                    <p>~~~~</p>
-                                </div>
+                        </div>
+                        <!-- <br> -->
+                        <div class="salad">
+                            <img src="img/6.jpg" width="450px">
+                            <div class="salad_caption">
+                                <h3>비프 샐러드</h3>
+                                <p>신선한 야채와 비프, 시원한 드레싱으로 구성된 샐러드입니다.</p>
                             </div>
-                            <div class="tart">
-                                <img src="img/4.jpg" width="450px">
-                                <div class="tart_caption">
-                                    <h3>Tart</h3>
-                                    <p>~~~~</p>
-                                </div>
+                        </div>
+                        <div class="tart">
+                            <img src="img/4.jpg" width="450px">
+                            <div class="tart_caption">
+                                <h3>블루베리 타르트</h3>
+                                <p>서양 디저트의 대표적인 타르트로, 바삭한 크러스트와 블루베리, 크림이 조화를 이룹니다. 고급스러운 맛을 느낄 수 있어요.</p>
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </li>
-            <li>
-                <section class="mainsite_section" id="main_Reservation">
-                    <div class="Reservation_header">
-                        <div class="Reservation_text_center">
-                            <h2>Reservation</h2>
-                            <hr>
-                            <button type="button" onclick="javascript:btn()"><a class="" th:href="@{login/login}">사전 예약</a></button>
+            <li class="mainsite_section" id="main_Reservation">
+                <div class="Reservation_header">
+                    <div class="text_center">
+                        <h2>Reservation</h2>
+                        <hr>
+                    </div>
+                    <div id="reservation_content">
+                        <div>
+                            <button type="button" onclick="javascript:btn()">
+                                <a class="" th:href="@{login/login}">사전 예약</a>
+                            </button>
                             <p style="padding-top: 50px;">SWEB만의 사전 예약 서비스를 통해 웨이팅 없이 레스토랑을 즐겨보세요!</p>
                         </div>
                     </div>
-                </section>
+                </div>
             </li>
-            <li>
-                <section class="mainsite_section" id="main_Location">
-                    <div class="Location_header">
-                        <div class="Location_text_center">
-                            <h2>Location</h2>
-                            <hr>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18604.984913064214!2d127.01634880846777!3d37.30026454018563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b5c9c1e337b5b%3A0x437f7735e290ec4d!2z6rK96riw64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1684722069125!5m2!1sko!2skr" width="600" height="450" style="border:0; margin-top: 50px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-                        </div>
+            <li class="mainsite_section" id="main_Location">
+                <div class="Location_header">
+                    <div class="text_center">
+                        <h2>Location</h2>
+                        <hr>
                     </div>
-                </section>
+                    <div id="location_content">
+                        <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18604.984913064214!2d127.01634880846777!3d37.30026454018563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b5c9c1e337b5b%3A0x437f7735e290ec4d!2z6rK96riw64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1684722069125!5m2!1sko!2skr"
+                        width="600" height="450" style="border:0; margin-top: 50px;" allowfullscreen=""
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
     <footer>
         <P>2023 © SWEB. All Rights Reserved.</P>
         <div class="footer_icon">
-            <a href="https://github.com/Se-Engineering-2023-kgu/termProject-main" target="_blank"><img src="img/github_icon.png" width="30px"></a>
-        <a href="https://heather-baryonyx-5f6.notion.site/K-Scrum-efe8e127bb6147b1b667e96b0cd90f55" target="_blank"><img src="img/notion_icon.png" width="30px"></a>
+            <a href="https://github.com/Se-Engineering-2023-kgu/termProject-main" target="_blank">
+                <img src="img/github_icon.png" width="30px">
+            </a>
+            <a href="https://heather-baryonyx-5f6.notion.site/K-Scrum-efe8e127bb6147b1b667e96b0cd90f55" target="_blank">
+                <img src="img/notion_icon.png" width="30px">
+            </a>
         </div>
     </footer>
 </body>
 <script>
-    function btn(){
+    function btn() {
         alert('로그인이 필요한 서비스입니다.');
     }
 </script>
+
 </html>
