--- a/src/main/resources/static/css/loginPage.css
+++ b/src/main/resources/static/css/loginPage.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Merriweather', serif;
+}
 .wrap{
     width: 100%;
     height: 100vh;
@@ -13,6 +16,12 @@
     background: rgb(93, 86, 78);
 }
 
+.navbar_logo{
+    position: absolute;
+    left: 10px;
+    top: 10px;
+
+}
 .login {
     width: 30%;
     height: 600px;
@@ -24,22 +33,23 @@
     flex-direction: column;
 }
 
+/* .login label{
+    font-size: 5px;
+} */
 h2{
     font-size: 2em;
     padding-bottom: 50px;
 }
 
+/* #login_form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+} */
+
 #loginId {
-    margin-top: 20px;
+    margin-top: 10px;
     width: 100%;
-}
-  
-#loginPwd {
-    margin-top: 20px;
-    width: 100%;
-}
-  
-.login input{
     width: 100%;
     height: 40px;
     border-radius: 30px;
@@ -48,13 +58,67 @@ h2{
     padding: 0px 20px;
     border: 1px solid lightgray;
     outline: none;
+    /* background-color: aquamarine; */
 }
+  
+#loginPwd {
+    margin-top: 10px;
+    width: 100%;
+    width: 100%;
+    height: 40px;
+    border-radius: 30px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+    /* background-color: aquamarine; */
+}
+  
+/* .login input{
+    width: 100%;
+    height: 40px;
+    border-radius: 30px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+    background-color: aquamarine; */
+/* } */
 
 .login label{
-    font-size: 18px;
+    font-size: 15px;
+    /* background-color: aqua; */
+    
 }
 
+#auto_login_container{
+    display: flex;
+    justify-content: center;
+
+}
+#checkbox {
+    position: relative;
+    top:2.0px;
+}
+#auto_login{
+    position: relative;
+    flex-shrink: 0;
+    left: 3.0px;
+    font-size: 12px !important;
+}
+/* .login #checkbox{
+    width: 20px;
+    height: 20px;
+    margin-left: 0;
+    margin-top:10px;
+    background-color: blue;
+
+} */
+
 .login button{
+    margin-top: 30px;
     width: 100%;
     height: 50px;
     border: 0;
@@ -66,8 +130,4 @@ h2{
 
 }
 
-#checkbox {
-    width: 20px;
-    height: 20px;
-    margin-left: 0;
-}
+
