23-06-03 manageCustomerPage 동적 쿼리 생략

--- a/src/main/resources/templates/admin/manageCustomerPage.html
+++ b/src/main/resources/templates/admin/manageCustomerPage.html
@@ -233,6 +233,16 @@
                         <i class="fas fa-table me-1"></i>
                         고객 관리
                     </div>
+                    <form class="" th:object="${appUserSearch}">
+                        <div class="card-body" id="display_flex_center">
+                            <div class="">
+                                <input placeholder="회원명" th:field="*{name}" type="text"/>
+                                <button type="submit">검색</button>
+                            </div>
+
+                        </div>
+                    </form>
+
                     <div class="card-body" id="display_flex_center">
                         <table id="datatablesSimple">
                             <thead>
