--- a/src/main/resources/templates/customer/customerInfo.html
+++ b/src/main/resources/templates/customer/customerInfo.html
@@ -15,7 +15,7 @@
 <div class="wrap">
     <div class="mypage">
         <div class="user">
-            <img src="/img/user_icon.png" style="margin-top: 30px;" width="100px">
+            <a href="/"><img src="/img/user_icon.png" style="margin-top: 30px;" width="100px"></a>
 
         </div>
         <div>
