--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -11,6 +11,7 @@
 <div class="wrap">
     <div class="Select">
         <h3>예약 페이지 2. 테이블 선택 </h3>
+        <img src="/img/table.png" alt="" width="350px" style="margin-top: 20px;">
         <form method="post" role="form" th:action="@{/customer/{id}/table(id=${id})}"
               th:object="${reservation}">
             <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
