--- a/src/main/resources/static/css/reservationTable.css
+++ b/src/main/resources/static/css/reservationTable.css
@@ -11,25 +11,27 @@
     align-items: center;
     justify-content: center;
     background: rgb(93, 86, 78);
+    font-size: larger;
 }
 .wrap form{
     width: 150px;
-    font-size: 15px;
+    font-size: 18px;
     padding-top: 30px;
 }
 
 .Select{
     width: 30%;
-    height: 600px;
+    height: 630px;
     background: white;
     border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 20px;
 }
 .Select h3{
-    margin-bottom: 15px;
+    margin: 15px 0;
 }
 
 .submit{
