--- a/src/main/resources/templates/user/loginPage.html
+++ b/src/main/resources/templates/user/loginPage.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>"/user/login" 로그인 페이지</title>
     <link rel="stylesheet" href="/css/loginPage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 
 <body>
