--- a/src/main/resources/templates/user/registerPage.html
+++ b/src/main/resources/templates/user/registerPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sing-up site</title>
     <link rel="stylesheet" href="/css/resgisterPage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="wrap">
@@ -11,29 +12,29 @@
         <h2>Sign-up</h2>
         <form method="post" required th:action="@{/user/register}" th:object="${user}">
             <div class="loginID">
-                <label for="loginId">Login ID</label>
+                <label for="loginId">로그인 아이디</label>
                 <br>
                 <input id="loginId" required th:field="*{loginId}" type="text"/>
             </div>
             <div class="loginPwd">
-                <label for="loginPwd">Login Password</label>
+                <label for="loginPwd">로그인 비밀번호</label>
                 <br>
                 <input id="loginPwd" required th:field="*{loginPwd}" type="password"/>
             </div>
             <div class="name">
-                <label for="name">Name</label>
+                <label for="name">성함</label>
                 <br>
                 <input id="name" required th:field="*{name}" type="text"/>
             </div>
     
     
             <div class="phoneNumber">
-                <label for="phoneNumber">Phone Number</label>
+                <label for="phoneNumber">전화번호</label>
                 <br>
                 <input id="phoneNumber" th:field="*{phoneNumber}" type="text"/>
             </div>
             <div class="email">
-                <label for="email">Email</label>
+                <label for="email">이메일</label>
                 <br>
                 <input id="email" th:field="*{email}" type="text"/>
             </div>
@@ -46,7 +47,7 @@
                     </option>
                 </select>
             </div>
-            <button type="submit">Submit</button>
+            <button type="submit">회원가입</button>
         </form>
     </div>
 </div>
