--- a/src/main/resources/templates/user/registerPage.html
+++ b/src/main/resources/templates/user/registerPage.html
@@ -9,7 +9,7 @@
 <body>
 <div class="wrap">
     <div class="Sign-up">
-        <h2>Sign-up</h2>
+        <h2>회원가입</h2>
         <form method="post" required th:action="@{/user/register}" th:object="${user}">
             <div class="loginID">
                 <label for="loginId">로그인 아이디</label>
