--- a/src/main/resources/static/css/mainPage.css
+++ b/src/main/resources/static/css/mainPage.css
@@ -145,8 +145,8 @@ a {
     /* position: relative; */
     font-family: 'Nanum Gothic', sans-serif;
 }
-#reservation_content div{
-    
+#reservation_content button{
+    /* width: 300px; */
     /* position: absolute;
     top: 20%;
     left: 50%; */
@@ -162,7 +162,7 @@ a {
 /*  transform: translate(-0%, -50%);*/
 /*}*/
 #reservation_content button {
-    width: 70%;
+    width: 300px;
     height: 50px;
     border: 0;
     outline: none;
